# pydit

./: README.md  makefile  pyproject.toml
.github/workflows/: .github-ci.yml
docs/pt/: main.md
examples/simple-http/: pyproject.toml
examples/simple-http/src/: app.py
examples/simple-http/src/adapters/repositories/in_memory/: user.py
examples/simple-http/src/adapters/repositories/interfaces/: user.py
examples/simple-http/src/configs/: dependencies.py  di.py  get_db_config.py
examples/simple-http/src/constants/: injection.py
examples/simple-http/src/domain/user/: module.py
examples/simple-http/src/domain/user/models/: create_user.py  user.py
examples/simple-http/src/domain/user/services/: create.py  list.py
examples/simple-http/src/mappers/: user.py
examples/simple-http/src/routes/: __init__.py  hello.py  user.py
examples/simple-http/src/schemas/user/: create_user.py
pydit/core/: __init__.py  register.py  resolver.py
pydit/exceptions/: custom.py
pydit/injector/: __init__.py  register.py
pydit/types/: annotated_dependency.py
pydit/utils/: logging.py
src/core/injector/: dependencies.py  register.py
tests/unit/: dep_resolver_test.py  injection_test.py
